Building landing page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Tim Shea</title>
 	</head>
-	<body>
-		<h1>Hello!</h1>
+	<body style="width: 100%;">
+		<div style="background-color: lightgray;">
+			<h1>Tim Shea</h1>
+		</div>
+		<div>
+			<p>content</p>
+		</div>
 	</body>
 </html>
