--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Tim Shea</title>
 	</head>
-	<body style="width: 100%;">
-		<div style="background-color: lightgray;">
-			<h1>Tim Shea</h1>
+	<body>
+		<div style="padding: 0.25em; background-image: url('img/EastViewFromUCM.jpg'); background-size: cover; background-position: center bottom; background-color: lightgray;">
+			<div style="display: inline-block; background-color: rgba(0,0,0,0.3); margin: 1em 0 1em 0; padding: 0.25em;">
+				<h1 style="font-family: sans-serif; color: white; margin: 0;">Tim Shea</h1>
+				<h3 style="font-family: sans-serif; color: lightgrey; margin: 0;">Cognitive and Information Sciences, University of California, Merced</h2>
+			</div>
 		</div>
 		<div>
-			<p>content</p>
+			<p>Hello world!</p>
 		</div>
 	</body>
 </html>
