--- a/index.html
+++ b/index.html
@@ -1,17 +1,115 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<style>
+.topnav {
+	overflow: hidden;
+	background-color: #333;
+}
+
+.topnav a {
+	float: left;
+	display: block;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.active {
+	background-color: #4CAF50;
+	color: white;
+}
+
+.topnav .icon {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	.topnav a:not(:first-child) {
+		display: none;
+	}
+	.topnav a.icon {
+		float: right;
+		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {
+		position: relative;
+	}
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+	}
+}
+
+.content-section {
+	padding: 0.5em;
+}
+
+.photo {
+	height: 70%;
+}
+		</style>
 		<title>Tim Shea</title>
 	</head>
-	<body>
-		<div style="padding: 0.25em; background-image: url('img/EastViewFromUCM.jpg'); background-size: cover; background-position: center bottom; background-color: lightgray;">
+	<body style="margin: 0; font-family: sans-serif;">
+		<a name="top"></a>
+		<div style="padding: 0.5em; background-image: url('img/EastViewFromUCM.jpg'); background-size: cover; background-position: center bottom; background-color: lightgray;">
 			<div style="display: inline-block; background-color: rgba(0,0,0,0.3); margin: 1em 0 1em 0; padding: 0.25em;">
 				<h1 style="font-family: sans-serif; color: white; margin: 0;">Tim Shea</h1>
 				<h3 style="font-family: sans-serif; color: lightgrey; margin: 0;">Cognitive and Information Sciences, University of California, Merced</h2>
 			</div>
 		</div>
-		<div>
-			<p>Hello world!</p>
+		<div class="topnav" id="myTopnav">
+			<a href="#top" class="active">Top</a>
+			<a href="#projects">Projects</a>
+			<a href="#photos">Photos</a>
+			<a href="#contact">Contact</a>
+			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="showNav()">&#9776;</a>
 		</div>
+		<div class="content-section">
+			<a name="projects"><h3>Projects</h3></a>
+			<p>Emergent Oscillations in Brain Networks</p>
+			<a name="photos"><h3>Photos</h3></a>
+			<img src="img/PavlovsDogs.jpg" class="photo"/>
+			<img src="img/KayakingSelfie.jpg" class="photo"/>
+			<img src="img/SculptureGarden.jpg" class="photo"/>
+			<img src="img/WashingtonMonument.jpg" class="photo"/>
+		</div>
+		<div class="content-section">
+			<a name="contact"><h3>Contact</h3></a>
+			<p>Timothy M. Shea</p>
+			<p>
+				<span id="obf"><script>
+				document.getElementById("obf").innerHTML="<n uers=\"znvygb:gvz.z.furn@tznvy.pbz\" gnetrg=\"_oynax\">rznvy</n>".replace(
+				/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
+				</script></span>
+			</p>
+		</div>
+		<script>
+function showNav() {
+    var x = document.getElementById("myTopnav");
+    if (x.className === "topnav") {
+        x.className += " responsive";
+    } else {
+        x.className = "topnav";
+    }
+}
+		</script>
 	</body>
 </html>
