--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 		<style>
 .topnav {
 	overflow: hidden;
 	background-color: #333;
+	position: fixed;
+	width: 100%;
+}
+
+.topnav-spacer {
+	height: 48px;
 }
 
 .topnav a {
@@ -43,7 +50,7 @@
 
 @media screen and (max-width: 600px) {
 	.topnav.responsive {
-		position: relative;
+		position: fixed;
 	}
 	.topnav.responsive .icon {
 		position: absolute;
@@ -60,39 +67,40 @@
 .content-section {
 	padding: 0.5em;
 }
-
+	
 .photo {
-	height: 70%;
+	max-width: 100%;
 }
 		</style>
 		<title>Tim Shea</title>
 	</head>
 	<body style="margin: 0; font-family: sans-serif;">
-		<a name="top"></a>
+		<div class="topnav" id="myTopnav">
+			<a class="nav-option">Top</a>
+			<a class="nav-option">Projects</a>
+			<a class="nav-option">Photos</a>
+			<a class="nav-option">Contact</a>
+			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="showNav()">&#9776;</a>
+		</div>
+		<div class="topnav-spacer"></div>
+		<a name="top" id="top"></a>
 		<div style="padding: 0.5em; background-image: url('img/EastViewFromUCM.jpg'); background-size: cover; background-position: center bottom; background-color: lightgray;">
 			<div style="display: inline-block; background-color: rgba(0,0,0,0.3); margin: 1em 0 1em 0; padding: 0.25em;">
 				<h1 style="font-family: sans-serif; color: white; margin: 0;">Tim Shea</h1>
 				<h3 style="font-family: sans-serif; color: lightgrey; margin: 0;">Cognitive and Information Sciences, University of California, Merced</h2>
 			</div>
 		</div>
-		<div class="topnav" id="myTopnav">
-			<a href="#top" class="active">Top</a>
-			<a href="#projects">Projects</a>
-			<a href="#photos">Photos</a>
-			<a href="#contact">Contact</a>
-			<a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="showNav()">&#9776;</a>
-		</div>
 		<div class="content-section">
-			<a name="projects"><h3>Projects</h3></a>
+			<a name="projects" id="projects"><h3>Projects</h3></a>
 			<p>Emergent Oscillations in Brain Networks</p>
-			<a name="photos"><h3>Photos</h3></a>
+			<a name="photos" id="photos"><h3>Photos</h3></a>
 			<img src="img/PavlovsDogs.jpg" class="photo"/>
 			<img src="img/KayakingSelfie.jpg" class="photo"/>
 			<img src="img/SculptureGarden.jpg" class="photo"/>
 			<img src="img/WashingtonMonument.jpg" class="photo"/>
 		</div>
 		<div class="content-section">
-			<a name="contact"><h3>Contact</h3></a>
+			<a name="contact" id="contact"><h3>Contact</h3></a>
 			<p>Timothy M. Shea</p>
 			<p>
 				<span id="obf"><script>
@@ -102,6 +110,20 @@
 			</p>
 		</div>
 		<script>
+$(function() {
+	//Set up menu nav
+	$('.nav-option').click(function(){
+		var id = $(this).text().toLowerCase();
+		var target = $('#' + id);
+		console.log(target);
+		$('html, body').animate({
+			scrollTop: target.offset().top - 48
+		}, 800);
+		showNav();
+	});
+
+});
+
 function showNav() {
     var x = document.getElementById("myTopnav");
     if (x.className === "topnav") {
