Quick fix for navbar height.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	background-color: #333;
 	position: fixed;
 	width: 100%;
+	height: 48px;
 }
 
 .topnav-spacer {
@@ -69,7 +70,8 @@
 }
 	
 .photo {
-	max-width: 100%;
+	max-width: 90%;
+	margin-left: 5%;
 }
 		</style>
 		<title>Tim Shea</title>
