Added swipe on slideshow.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-				crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		<style>
 .topnav {
 	overflow: hidden;
@@ -90,6 +91,8 @@
 	margin-top: 16px;
 	background-color: #ddd;
 }
+
+::-webkit-scrollbar { width: 0px; }
 		</style>
 		<title>Tim Shea</title>
 	</head>
@@ -174,7 +177,12 @@ function showDivs(n) {
 }
 
 function swipeHandler(event) {
-	console.log('test');
+	var dx = event.swipestop.coords[0] - event.swipestart.coords[0];
+	if (dx > 5) {
+		plusDivs(1);
+	} else if (dx < -5) {
+		plusDivs(-1);
+	}
 }
 		</script>
 	</body>
