--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-		<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		<style>
 .topnav {
 	overflow: hidden;
@@ -84,6 +84,12 @@
 	margin: 0 auto;
 }
 
+@media screen and (max-width: 600px) {
+	.photo-slideshow {
+		height: auto;
+	}
+}
+
 #footer {
 	-webkit-box-shadow: 0px -12px 8px rgba(221, 221, 221, 1);
     -moz-box-shadow: 0px -12px 8px rgba(221, 221, 221, 1);
@@ -135,7 +141,7 @@
 		</div>
 		<script>
 $(function() {
-	$('.topnav-spacer').height($('.topnav').height())
+	$('.topnav-spacer').height($('.topnav').height() - 2)
 	$('.nav-option').click(function(){
 		var id = $(this).text().toLowerCase();
 		var target = $('#' + id);
