--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="style.css" />
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<link rel="icon" type="image/png" href="img/favicon2.png" sizes="32x32">
 		<title>Tim Shea</title>
 	</head>
 	<body style="margin: 0; font-family: sans-serif;">
@@ -32,21 +33,28 @@
 			<p>I'm a PhD student in California studying the mind and brain. My primary research interests are how
 			organization and dynamics in the brain give rise to complex cognition, and how humans and artificial
 			agents might learn to follow instructions and create plans. I love to play strategy games in my scarce
-			free time and whenever possible I try to retreat into the mountains.</p>
+			free time and whenever possible I try to retreat into the mountains with my best friend.</p>
 		</div>
 		<div class="content-section">
-			<a name="projects" id="projects"><h3>Projects</h3></a>
-			<h4>Emergent Oscillations in Brain Networks</h4>
+			<a name="projects" id="projects"><h3>Recent Projects</h3></a>
+			
+			<h4>Emergent Oscillations in Brain Networks
+			<a href="oscillations.html">Graphical Walk-Through</a>
+			<a href="https://github.com/tim-shea/expresscogs" target="_blank">Project Github</a></h4>
 			<p>Collaborators: Dave Noelle, Anne Warlaumont, Ramesh Balasubramaniam</p>
-			<p>Manuscript in preparation. Poster @ SfN 2017</p>
+			<p>Manuscript in preparation + <a href="doc/SfN2017_Poster.pdf" target="_blank">Poster @ SfN 2017</a></p>
+			
+			<h4>Embodied Word Learning in Virtual Reality</h4>
+			<p>Collaborators: Chelsea Gordon, Ramesh Balasubramaniam, Dave Noelle</p>
+			<p>Manuscript in preparation</p>
 			
 			<h4>Modeling Infant Speech Development with Spiking Neural Networks</h4>
 			<p>Advisor: Anne Warlaumont</p>
-			<p>Poster @ NCPW 2016</p>
+			<p><a href="doc/NCPW15_BabbleNN.pdf" target="_blank">Poster @ NCPW 2016</a></p>
 			
 			<h4>Deep Autoencoding of Naturalistic Infant and Parent Vocalizations</h4>
 			<p>Collaborators: Anne Warlaumont, Chris Kello, Dave Noelle, Gina Pretzer, Eric Walle</p>
-			<p>Poster @ NCPW 2016</p>
+			<p><a href="doc/NCPW15_IVFCR.pdf" target="_blank">Poster @ NCPW 2016</a></p>
 		</div>
 		<div class="content-section" id="slideshow-container" onclick="plusDivs(+1)">
 			<a name="photos" id="photos"><h3>Photos</h3></a>
