Updating project links

--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@
 		<div class="content-section">
 			<a name="projects" id="projects"><h3>Recent Projects</h3></a>
 			
-			<h4>Emergent Oscillations in Brain Networks
-			<a href="oscillations.html">Graphical Walk-Through</a>
-			<a href="https://github.com/tim-shea/expresscogs" target="_blank">Project Github</a></h4>
+			<h4>Emergent Oscillations in Brain Networks</h4>
 			<p>Collaborators: Dave Noelle, Anne Warlaumont, Ramesh Balasubramaniam</p>
-			<p>Manuscript in preparation + <a href="doc/SfN2017_Poster.pdf" target="_blank">Poster @ SfN 2017</a></p>
+			<p>Manuscript in preparation |
+			<a href="oscillations.html" target="_blank">visualized</a> |
+			<a href="doc/SfN2017_Poster.pdf" target="_blank">Poster @ SfN 2017</a> |			
+			<a href="https://github.com/tim-shea/expresscogs" target="_blank">github</a></p>
+			
+			<h4>Deep Learning + Robot Arm Simulation</h4>
+			<p><a href="http://nbviewer.jupyter.org/github/tim-shea/code-everyday/blob/master/motorconvnet/MotorConvNet.ipynb"
+			target="_blank">jupyter nb</a> |
+			<a href="https://github.com/tim-shea/code-everyday/tree/master/motorconvnet" target="_blank">github</a></p>
 			
 			<h4>Embodied Word Learning in Virtual Reality</h4>
 			<p>Collaborators: Chelsea Gordon, Ramesh Balasubramaniam, Dave Noelle</p>
@@ -50,7 +56,8 @@
 			
 			<h4>Modeling Infant Speech Development with Spiking Neural Networks</h4>
 			<p>Advisor: Anne Warlaumont</p>
-			<p><a href="doc/NCPW15_BabbleNN.pdf" target="_blank">Poster @ NCPW 2016</a></p>
+			<p><a href="doc/NCPW15_BabbleNN.pdf" target="_blank">Poster @ NCPW 2016</a> |
+			<a href="https://github.com/tim-shea/BabbleNN" target="_blank">github</a></p>
 			
 			<h4>Deep Autoencoding of Naturalistic Infant and Parent Vocalizations</h4>
 			<p>Collaborators: Anne Warlaumont, Chris Kello, Dave Noelle, Gina Pretzer, Eric Walle</p>
