--- a/oscillations.html
+++ b/oscillations.html
@@ -15,7 +15,7 @@
 			<a class="nav-option">Oscillations in Brain Networks</a>
 		</div>
 		<div class="topnav-spacer"></div>
-		<div class="content-section" id="slideshow-container" style="padding: 0;">
+		<div id="slideshow-container" style="padding: 0;">
 			<img src="img/bg_model/ActionSelection.png" class="oscillation-figure"/>
 			<img src="img/bg_model/ActiveMaintenance.png" class="oscillation-figure"/>
 			<img src="img/bg_model/BumpAttractor.png" class="oscillation-figure"/>
