--- a/index.html
+++ b/index.html
@@ -67,9 +67,8 @@
 			<p>Collaborators: <a href="https://www.ucmerced.edu/content/david-c-noelle">Dave Noelle</a>,
 			<a href="https://www.annewarlaumont.org/">Anne Warlaumont</a>,
 			<a href="https://www.rameshlab.com/">Ramesh Balasubramaniam</a></p>
-			<p>Java | Python</p>
 			<p>Manuscript in preparation |
-			<a href="oscillations.html" target="_blank">visualized</a> |
+			<!--<a href="oscillations.html" target="_blank">visualized</a> |-->
 			<a href="doc/SfN2017_Poster.pdf" target="_blank">Poster @ SfN 2017</a> |			
 			<a href="https://github.com/tim-shea/expresscogs" target="_blank">github</a></p>
 			
