Added VR Toolkit webpage.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
 			<p>Before starting my PhD, I studied Computer Science at California State University, Sacramento. I
 			concentrated in artificial intelligence. I also worked at the California SWRCB, an agency within the
 			California EPA, where I supported environmental remediation programs by building information systems.</p>
-			
 		</div>
 		<div class="content-section">
 			<a name="projects" id="projects"></a>
@@ -139,10 +138,12 @@
 			<img src="img/LouisInWeekendBag.jpg" class="photo-slideshow" title="Louis is ready for a trip.">
 			<img src="img/BlurryTimAndLouis.jpg" class="photo-slideshow" title="Louis and I.">
 			<img src="img/UCMercedInFog.jpg" class="photo-slideshow" title="The view facing south along the main drag of UCM on a foggy day.">
+			<img src="img/Doggo.jpg" class="photo-slideshow" title="Jake the dog doing his close-up.">
+			<img src="img/Doggo2.jpg" class="photo-slideshow" title="Jake the doggo hanging out in the backyard.">
 		</div>
 		<div class="content-section" id="footer" style="max-width: 100%">
 			<p>I made all of these things, so (c) Tim Shea, but please use anything you find here however you like
-			(<a href="https://opensource.org/licenses/MIT">MIT license</a>). This page was updated Feb. 20, 2018.</p>
+			(<a href="https://opensource.org/licenses/MIT">MIT license</a>). This page was updated Mar. 19, 2018.</p>
 		</div>
 		<script>
 $(function() {
