Adding link to toolkit

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 				<img src="img/WLVRScreenshot.png" class="photo" title=""/>
 			</div>
 			<p>Collaborators: <a href="https://www.rameshlab.com/people.html">Chelsea Gordon</a>, Ramesh Balasubramaniam, Dave Noelle</p>
+			<a href="behavioral_toolkit.html" target="_blank">VR Toolkit</a> |
 			<p>Manuscript in preparation</p>
 			
 			<h4>Modeling Infant Speech Development with Spiking Neural Networks</h4>
