--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="banner">
 			<div style="display: inline-block; background-color: rgba(0,0,0,0.3); margin: 1em 0 1em 0; padding: 0.25em;">
 				<h1 style="color: white; margin: 0;">Tim Shea</h1>
-				<h3 style="color: lightgrey; margin: 0;">Cognitive and Information Sciences, University of California, Merced</h2>
+				<h3 style="color: lightgrey; margin: 0;">Computational Cognitive Scientist @ Accenture Tech Labs, San Francisco</h2>
 				<h3 style="margin: 0;"><span id="obf"><script>
 				document.getElementById("obf").innerHTML="<n uers=\"znvygb:gvz.z.furn@tznvy.pbz\" gnetrg=\"_oynax\">rznvy</n>".replace(
 				/[a-zA-Z]/g,function(c){return String.fromCharCode((c<="Z"?90:122)>=(c=c.charCodeAt(0)+13)?c:c-26);});
