--- a/index.html
+++ b/index.html
@@ -31,15 +31,12 @@
 			</div>
 		</div>
 		<div class="content-section">
-			<p>In the future, I will help to build cognitive technologies that integrate modern research with
-			practical engineering. I like to think about all sorts of problems, and love learning new tools to
-			address new challenges. I've been coding for almost 20 years in various languages. Solving problems
-			in code is exciting, but many problems are easier to solve by interacting with people than by building
-			a tool, so I am also a proponent of organizing social solutions to problems.</p>
-			<p>I'm a PhD student at the University of California, Merced studying the mind and brain. My primary
-			interests are how organization and dynamics in the brain give rise to complex cognition, and how humans
-			and artificial agents might learn to follow instructions and create plans. I love to play strategy
-			games in my free time and whenever possible I retreat into the mountains with my best friend.</p>
+			<p>I'm an applied researcher working on emerging technology at Accenture Tech Labs. My work involves
+			trying to understand and evaluate new technology -- including real-time machine learning methods and
+			neuromorphic computing.</p>
+			<p>I completed a PhD at the University of California, Merced studying the mind and brain. My primary
+			interests are how organization and dynamics in the brain give rise to complex cognition. I love to play
+			strategy games in my free time and whenever possible I retreat into the mountains with my best friend.</p>
 			<p>Before starting my PhD, I studied Computer Science at California State University, Sacramento. I
 			concentrated in artificial intelligence. I also worked at the California SWRCB, an agency within the
 			California EPA, where I supported environmental remediation programs by building information systems.</p>
